--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -69,10 +69,6 @@ Save data to your class repo at `EDS-240-class-examples/week2/data/`:
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
-::: {.callout-important}
-## TODO
-- new lab content should include writing alt text + finding data (for FPM #1)
-:::
 
 ### A. Prepare a `week2-lab.qmd` file
 
@@ -82,7 +78,7 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [Lab 2 slides: Alt Text](lab/LAB-SLIDES-alt-text.qmd){target="_blank"} | [Lab 2 exercise: writing alt text](LAB-EXERCISE-alt-text-activity.qmd.qmd){target="_blank"} | [Lab 2 solution](){target="_blank"} |
+| [Lab 2 slides: Alt Text](lab/LAB-SLIDES-alt-text.qmd){target="_blank"} | [Lab 2 exercise: writing alt text](lab/LAB-EXERCISE-alt-text-activity.qmd){target="_blank"} | [Lab 2 solution](){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
