--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -38,6 +38,7 @@ knitr::include_graphics(here::here("images", "alt-text.png"))
 #| eval: false
 #| echo: true
 #| code-line-numbers: false
+install.packages("naniar") # tools for exploring missing data
 install.packages("ggridges") # {ggplot2} extension for creating ridgeline plots
 install.packages("gghighlight") # {ggplot2} extension for highlighting geoms
 install.packages("ggbeeswarm") # {ggplot2} extension for creating categorical scatter (violin point) plots
