--- a/course-materials/lecture-slides/SLIDES-distributions.qmd
+++ b/course-materials/lecture-slides/SLIDES-distributions.qmd
@@ -345,7 +345,7 @@ If `decimal_time = 0.5` (noon):
 ```{r}
 # # created / saved for lecture 4.3 ----
 # ggplot(mko_clean, aes(x = Temp_bot, y = month_name, fill = after_stat(x))) +
-#   ggridges::geom_density_ridges_gradient(rel_min_height = 0.01, scale = 3) +
+#   ggridges::geom_density_ridges_gradient(rel_min_height = 0.001, scale = 3) +
 #   geom_vline(xintercept = mean(mko_clean$Temp_bot, na.rm = TRUE), linetype = "dashed") +
 #   geom_vline(xintercept = 11, linetype = "dashed", color = "darkgray") +
 #   geom_vline(xintercept = 16, linetype = "dashed", color = "darkgray") +
@@ -708,7 +708,7 @@ mko_clean |>
 #| echo: true
 #| out-width: "90%"
 #| fig-align: "center"
-#| code-line-numbers: "3,5"
+#| code-line-numbers: "3-5"
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = month.name)) |> 
   ggplot(aes(x = Temp_bot)) +
@@ -781,7 +781,7 @@ mko_clean |>
 
 ::: {.column width="50%"}
 
-[Modify `binwidth` (30 `bins` by default) – does a bin width of 1 (degree Celsius) actually make sense? Consider scale of interest. Also be mindful when using bins – too few bins will result in loss of distribution shape.]{.body-text-s}
+[Modify `binwidth` (30 `bins` by default) – does a bin width of 1 (°C) actually make sense? Consider scale of interest. Also be mindful when using bins – too few will result in loss of distribution shape, too many adds noise.]{.body-text-s}
 
 ```{r histogram-bins}
 #| eval: true
@@ -819,7 +819,7 @@ mko_clean |>
 ::::
 
 ::: {.footer}
-`geom_density()` relies on `density()`, which uses the `nrd0` bandwidth selector (Silverman's rule-of-thumb-style estimator). This is a reliable starting point, but you may consider other selectors based on your data. Check out [thius article](https://aakinshin.net/posts/kde-bw/) to read more about bandwidth selection.
+`geom_density()` relies on `density()`, which uses the `nrd0` bandwidth selector (Silverman's rule-of-thumb-style estimator). This is a reliable starting point, but you may consider other selectors based on your data. Check out [this article](https://aakinshin.net/posts/kde-bw/){target="_blank"} to read more about bandwidth selection.
 :::
 
 ::: {.notes}
@@ -842,8 +842,9 @@ Default value: adjust = 1. This uses the default bandwidth provided by the under
 #| eval: true
 #| echo: true
 #| fig-align: "center"
-ggplot(mko_clean, aes(x = Temp_bot, y = after_stat(density))) + # scale down hist to match density curve
-  geom_histogram(fill = "gray", color = "black", alpha = 0.75) +
+ggplot(mko_clean, aes(x = Temp_bot)) + 
+  geom_histogram(aes(y = after_stat(density)), # scale hist to match density curve
+                 fill = "gray", color = "black", alpha = 0.75) +
   geom_density(linewidth = 1) 
 ```
 
@@ -940,7 +941,7 @@ Ridgeline plots, box plots, and violin plots are better suited for visualizing t
 #| echo: false
 #| fig-align: "center"
 ggplot(mko_clean, aes(x = Temp_bot, y = month_name, fill = after_stat(x))) +
-  ggridges::geom_density_ridges_gradient(rel_min_height = 0.01, scale = 3) +
+  ggridges::geom_density_ridges_gradient(rel_min_height = 0.001, scale = 3) +
   scale_y_discrete(limits = rev(month.name)) +
   scale_fill_gradientn(colors = c("#2C5374","#849BB4", "#D9E7EC", "#EF8080", "#8B3A3A"))
 ```
@@ -1015,7 +1016,7 @@ ggplot(mko_clean, aes(x = month_name, y = Temp_bot)) +
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = rev(month.name))) |> # alt, within ggplot: `scale_y_discrete(limits = rev(month.name))`
   ggplot(aes(x = Temp_bot, y = month_name)) +
-  ggridges::geom_density_ridges(rel_min_height = 0.01, scale = 3)  # `rel_min_height` sets threshold for relative height of density curves (any values below threshold treated as 0); `scale` controls extent to which different densities overlap
+  ggridges::geom_density_ridges(rel_min_height = 0.001, scale = 3)  # `rel_min_height` sets threshold for relative height of density curves (any values below threshold treated as 0); `scale` controls extent to which different densities overlap
 ```
 :::
 
@@ -1029,8 +1030,8 @@ mko_clean |>
 #| fig-align: "center"
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = rev(month.name))) |> 
-  ggplot(aes(x = Temp_bot, y = month_name, fill = after_stat(x))) + # `after_stat(x)` tells ggplot: "Don't use the original data for coloring. Instead, wait until you've drawn the density curve, then color each part of that curve based on its x-axis position (Temp_bot)." This creates a color gradient that flows along the curve from cold to warm temperatures.
-  ggridges::geom_density_ridges_gradient(rel_min_height = 0.01, scale = 3) + 
+  ggplot(aes(x = Temp_bot, y = month_name, fill = after_stat(x))) + # `after_stat(x)` tells ggplot: "Don't use the original data for coloring. Instead, wait until you've drawn the density curve, then color each part of that curve based on its x-axis position."
+  ggridges::geom_density_ridges_gradient(rel_min_height = 0.001, scale = 3) + 
   scale_fill_gradientn(colors = c("#2C5374","#849BB4", "#D9E7EC", "#EF8080", "#8B3A3A"))
 ```
 :::
@@ -1039,6 +1040,19 @@ mko_clean |>
 
 ::: {.notes}
 Ridgeline plots work well when there is a clear pattern in the result (e.g. if there is an obvious ranking in groups) and / or when visualizing changes in distributions over time or space
+
+`fill = after_stat(x)` = “Wait until you’ve computed the density ridge, then color each segment of the ridge based on its x-position.”
+`after_stat(x)` uses the x-values of the smoothed density curve, not the original data points, to determine color.
+
+What` after_stat(x)` means:
+- When you make a density ridgeline plot, ggplot doesn’t draw the curve directly from your raw temperature points.
+- Instead, for each month, ggplot:
+1. Looks at all the Temp_bot values for that month
+2. Draws a smooth curve that represents where temperatures are more or less common
+3. Builds that curve out of many tiny points from cold to warm temperatures
+
+- Those tiny points each have: an x position (how cold or warm) & a height (how tall the curve is there)
+- when you write, `fill = after_stat(x)`, you're saying, *“Color each tiny piece of the density curve based on how cold or warm it is.”*
 :::
 
 <!-- ---
