--- a/course-materials/lecture-slides/SLIDES-evolution.qmd
+++ b/course-materials/lecture-slides/SLIDES-evolution.qmd
@@ -189,7 +189,7 @@ The [`{tidycensus}` package](https://walker-data.com/tidycensus/){target="_blank
 
 <br>
 
-Using `{tidycensus}` requires that you first have an API key. **Be sure to follow the Pre-Course setup [instructions for requesting and activating your key](../week2.qmd#request-a-us-census-bureau-api-key){target="_blank"} before proceeding.**
+Using `{tidycensus}` requires that you first have an API key. **Be sure to follow the Pre-Course setup [instructions for requesting and activating your key](../week3.qmd#request-API-key){target="_blank"} before proceeding.**
 :::
 
 ::: {.column width="50%"}
